# Gcapture_qt6_srcroot

./: .gitignore  CMakeLists.txt  README.md  pack_qt6_viewer.bat
.qtcreator/: CMakeLists.txt.user.874a4e7
apps/qt6_viewer/: .gitignore  CMakeLists.txt  app.rc  d3dpreviewwidget.cpp  d3dpreviewwidget.h  displayinfodialog.cpp  displayinfodialog.h  displayinfodialog.ui  inputinfodialog.cpp  inputinfodialog.h  inputinfodialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_capture.cpp  mainwindow_frame.cpp  mainwindow_info.cpp  previewwindow.cpp  previewwindow.h  previewwindow.ui  procamp.cpp  procamp.h  procamp.ui  resources.qrc  tiff_analyzer.cpp  tiff_analyzer.h  tiffanalysisdialog.cpp  tiffanalysisdialog.h
apps/qt6_viewer/capturesdk/: capture_sdk_source.cpp  capture_sdk_source.h
apps/qt6_viewer/info/: capture_device_info.cpp  capture_device_info.h  display_output_info.cpp  display_output_info.h
sdk/gcapture/: CMakeLists.txt
sdk/gcapture/include/: gcapture.h
sdk/gcapture/src/core/: c_api.cpp  capture_manager.cpp  capture_manager.h  exports.def  frame_converter.cpp  frame_converter.h
sdk/gcapture/src/pipeline/: shared_scene_pipeline.cpp  shared_scene_pipeline.h
sdk/gcapture/src/providers/: dshow_custom_sink.cpp  dshow_custom_sink.h  dshow_provider.cpp  dshow_provider.h  dshow_raw_renderer.cpp  dshow_raw_renderer.h  dshow_signal_probe.cpp  dshow_signal_probe.h  mf_recorder.cpp  winmf_provider.cpp  winmf_provider.h
sdk/gdisplay/: CMakeLists.txt  display_info.cpp  display_info.h  edid_reader.cpp  edid_reader.h
